--- a/views/room.ejs
+++ b/views/room.ejs
@@ -27,12 +27,11 @@
         <div id="sign_in">
             <h6>sign in</h6>
             <div id="sign-box">
-                <input id="first_name" name="Firstname" placeholder="Firstname">
                 <input id="login_name" name="username" placeholder="Username">
                 <input type="password" id="login_pass" name="password" placeholder="Password">
                 <span id="eye-img"><img src="/pic/eye.png" alt="failed"></span>
                 <span id="hidden-eye-img"><img src="/pic/hidden-eye.png" alt="failed"></span>
-                <button id="login_btn" onClick="login()" onsubmit="return validateForm()" value="submit">Login</button>
+                <button id="login_btn" onClick="login()" value="submit">Login</button>
                 <div id="create-account">don't have an account? <span id="next-box" onclick="signUp()">create an
                         account</span></div>
             </div>
