--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,10 +18,12 @@
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/script.js"></script>
     <script defer src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="/typed.js"></script>
 </head>
 
 <body>
     <div class="login" id="login-box">
+        <h3 style="position: absolute; top: 12%; color: purple; font-weight: bolder; font-style: italic;">Welcome To <span id="element"></span></h3>
         <div id="logo"><img src="/pic/w2.png" alt="failed to load img" srcset=""></div>
         <div id="logo1"><img src="/pic/boy.gif" alt="failed to load img" srcset=""></div>
         <div id="sign_in">
